# Mahdi-27-5

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  example_run.py  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
api/: __init__.py  config.py  dependencies.py  main.py
arabic_engine/: __init__.py  closure.py  contracts.yaml  main_pipeline.py  mufrad_closure.py  pipeline.py  runtime_pipeline.py
db/: kernel_schema.cypher  kernel_seed.cypher  schema.cypher  seed.cypher
docs/: COMMIT_SIGNING.md  api_reference.md  architecture.md  atomic_beginning_law.md  chapter_19_general_closure.md  chapter_21_mafhum_types.md  domain_taxonomy_map.md  duplicate_logic_audit.md  epistemic_reception_constitution.md  fractal_core_constitution_v1.md  fractal_representation_spec_v1.md  kernel_schema.md  lexeme_fractal_constitution_v2.md  masdar_fractal_constitution.md  noun_fractal_constitution.md  particle_fractal_constitution.md  project_goals_and_proof_objectives_constitution_v1.md  rational_self_ontology_v1.md  semantic_direction_space_constitution.md  system_integrity_verification_plan_v1.md  unicode_cognitive_input_proof_v1.md  unicode_possibility_and_cognitive_admissibility_constitution_v1.md  unified_state_model.md  verb_fractal_constitution_v1.md  wad_mental_meaning_constitution_v1.md  weight_fractal_constitution.md
scripts/: branch_pr_merge.sh
tests/: __init__.py  test_adapters.py  test_admissibility.py  test_aeu.py  test_anti_hallucination.py  test_architecture_guard.py  test_axiom_types.py  test_boundary_gates.py  test_calculus_ops.py  (+90 more)
(+216 files in other folders)
